Amazon Payment JP用にローカライズ

--- a/app/design/adminhtml/default/default/template/flatz_amazon_payments/button.phtml
+++ b/app/design/adminhtml/default/default/template/flatz_amazon_payments/button.phtml
@@ -3,11 +3,11 @@
  * Amazon Diagnostics
  *
  * @category    Amazon
- * @package     Amazon_Diagnostics
+ * @package     FLATz_AmazonDiagnostics
  * @copyright   Copyright (c) 2015 Amazon.com
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-/* @var $this Amazon_Payments_Block_Adminhtml_Diagnostics */
+/* @var $this FLATz_AmazonPayments_Block_Adminhtml_Diagnostics */
 ?>
 
 <script type="text/javascript">
@@ -16,7 +16,7 @@
             method: 'get',
             onSuccess: function (transport) {
                 if (transport.responseText) {
-                    document.getElementById('amazon_diagnostics_result').value = transport.responseText;
+                    document.getElementById('flatz_amazon_diagnostics_result').value = transport.responseText;
                 }
             }
         });
