--- a/app/design/adminhtml/default/default/template/flatz_amazon_payments/notifications.phtml
+++ b/app/design/adminhtml/default/default/template/flatz_amazon_payments/notifications.phtml
@@ -3,12 +3,12 @@
  * Amazon Payments
  *
  * @category    Amazon
- * @package     Amazon_Payments
+ * @package     FLATz_AmazonPayments
  * @copyright   Copyright (c) 2014 Amazon.com
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
-/* @var $this Amazon_Payments_Block_Adminhtml_Notifications */
+/* @var $this FLATz_AmazonPayments_Block_Adminhtml_Notifications */
 ?>
 
 <?php if ($this->isMissingPaymentConfig()) : ?>
