--- a/app/design/frontend/base/default/template/flatz_amazon_payments/button_badge.phtml
+++ b/app/design/frontend/base/default/template/flatz_amazon_payments/button_badge.phtml
@@ -3,7 +3,7 @@
  * Amazon Payments
  *
  * @category    Amazon
- * @package     Amazon_Payments
+ * @package     FLATz_AmazonPayments
  * @copyright   Copyright (c) 2014 Amazon.com
  * @license     http://opensource.org/licenses/Apache-2.0  Apache License, Version 2.0
  */
@@ -12,7 +12,7 @@
 <?php if ($this->isButtonBadgeEnabled()): ?>
 
 <div class="amazon-payments-logo" style="text-align:center;">
-    <a href="https://payments.amazon.com/customer" target="_blank">
+    <a href="https://payments.amazon.co.jp/customer" target="_blank">
         <img src="https://images-na.ssl-images-amazon.com/images/G/01/Iris3_US/en_US/inca/images/60x38-whitegrad-x2.png" border="0" alt="Amazon Payments" />
     </a>
 </div>
