--- a/app/design/adminhtml/default/default/template/flatz_amazon_payments/textarea.phtml
+++ b/app/design/adminhtml/default/default/template/flatz_amazon_payments/textarea.phtml
@@ -3,11 +3,11 @@
  * Amazon Diagnostics
  *
  * @category    Amazon
- * @package     Amazon_Diagnostics
+ * @package     FLATz_AmazonDiagnostics
  * @copyright   Copyright (c) 2015 Amazon.com
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-/* @var $this Amazon_Payments_Block_Adminhtml_Diagnostics */
+/* @var $this FLATz_AmazonPayments_Block_Adminhtml_Diagnostics */
 ?>
 
-<textarea id="amazon_diagnostics_result" cols="40" style="width:100%; font-family:monospace;" wrap="off" readonly="readonly"></textarea>
+<textarea id="flatz_amazon_diagnostics_result" cols="40" style="width:100%; font-family:monospace;" wrap="off" readonly="readonly"></textarea>
