--- a/app/design/frontend/base/default/template/flatz_amazon_login/script_authorize.phtml
+++ b/app/design/frontend/base/default/template/flatz_amazon_login/script_authorize.phtml
@@ -3,7 +3,7 @@
  * Login with Amazon
  *
  * @category    Amazon
- * @package     Amazon_Login
+ * @package     FLATz_AmazonLogin
  * @copyright   Copyright (c) 2014 Amazon.com
  * @license     http://opensource.org/licenses/Apache-2.0  Apache License, Version 2.0
  */
